--- a/vss-mobile/android/src/main/res/values/strings.xml
+++ b/vss-mobile/android/src/main/res/values/strings.xml
@@ -9,7 +9,7 @@
     <string name="eyediseases_settings_load">Einstellungen laden</string>
     <string name="eyediseases_settings_reset">Einstellungen zurücksetzen</string>
     <string name="splitscreen_simulation">Splitscreen Simulation</string>
-    <string name="start_simulation">Simulation starten</string>
+    <string name="start_simulator">Simulation starten</string>
     <string name="eyediseases_settings">Einstellungen</string>
     <string name="simulation_source">Quelle</string>
     <string name="simulation">Simulation</string>
