--- a/vss-mobile/android/src/main/res/values/strings.xml
+++ b/vss-mobile/android/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">VSS</string>
+    <string name="share">Teilen</string>
     <string name="app_native_lib">vss</string>
     <string name="title_activity_main_menu">MainMenuActivity</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
