--- a/vss-mobile/android/src/main/res/values-en/strings.xml
+++ b/vss-mobile/android/src/main/res/values-en/strings.xml
@@ -4,9 +4,9 @@
     <string name="share">Share</string>
     <string name="navigation_drawer_close">Close drawer</string>
     <string name="action_settings">Settings</string>
-    <string name="eyediseases_settings_store">Save settings</string>
-    <string name="eyediseases_settings_load">Load settings</string>
-    <string name="eyediseases_settings_reset">Reset settings</string>
+    <string name="settings_save">Save settings</string>
+    <string name="settings_load">Load settings</string>
+    <string name="settings_reset">Reset settings</string>
     <string name="splitscreen_simulation">Splitscreen Simulation</string>
     <string name="start_simulator">Start simulation</string>
     <string name="eyediseases_settings">Settings</string>
